--- a/android/src/main/res/values/arrays.xml
+++ b/android/src/main/res/values/arrays.xml
@@ -136,7 +136,7 @@
         <item>#a73c08</item>
         <item>#fffd3c</item>
         <item>#9f1af5</item>
-        <iten>#e13035</item>
+        <item>#e13035</item>
         <item>#000000</item>
     </string-array>
 
