--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -174,11 +174,11 @@
         <item name="annot_text_size_max">72</item>
     </style>
 
-    <style name="BighamCalloutPresetRed">
+    <style name="BighamCalloutPresetGreen">
         <item name="annot_text_color">#000000</item>
         <item name="annot_font_size">16</item>
         <item name="annot_color">#000000</item>
-        <item name="annot_fill_color">#e13035</item>
+        <item name="annot_fill_color">#75d940</item>
         <item name="annot_thickness">1</item>
         <item name="annot_font">Roboto</item>
         <item name="annot_text_size_min">4</item>
@@ -207,11 +207,11 @@
         <item name="annot_text_size_max">72</item>
     </style>
 
-    <style name="BighamFreeTextPresetRed">
+    <style name="BighamFreeTextPresetGreen">
         <item name="annot_text_color">#000000</item>
         <item name="annot_font_size">16</item>
         <item name="annot_color">#000000</item>
-        <item name="annot_fill_color">#e13035</item>
+        <item name="annot_fill_color">#75d940</item>
         <item name="annot_thickness">1</item>
         <item name="annot_font">Roboto</item>
         <item name="annot_text_size_min">4</item>
